# dotmac-shared

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/dotmac/: __init__.py
src/dotmac/shared/: __init__.py  _db_impl.py  celery_app.py  database.py  dependencies.py  redis_client.py  service_auth.py  settings.py  version.py
src/dotmac/shared/audit/: __init__.py  middleware.py  models.py  retention.py  router.py  service.py
src/dotmac/shared/auth/: __init__.py  api_keys_metrics_router.py  api_keys_router.py  billing_permissions.py  bootstrap.py  core.py  dependencies.py  email_service.py  exceptions.py  field_service_permissions.py  isp_permissions.py  metrics_router.py  mfa_service.py  models.py  partner_context_middleware.py  partner_permissions.py  partner_tenant_validation.py  platform_admin.py  platform_admin_router.py  rate_limits.py  rbac_audit.py  rbac_dependencies.py  rbac_read_router.py  rbac_router.py  rbac_service.py  router.py  token_with_rbac.py
src/dotmac/shared/cache/: __init__.py
src/dotmac/shared/communications/: models.py  (+10 more)
tests/: conftest.py  conftest_rls_helpers.py  conftest_telemetry.py  shared_fixtures.py
tests/auth/: conftest.py  test_2fa_endpoints.py  test_2fa_login_flow.py  test_api_key_redis_fallback.py  test_api_key_tenant_isolation.py  test_api_keys_metrics_simple.py  test_api_keys_router.py  test_auth_metrics_router.py  test_avatar_upload.py  test_backup_codes.py  test_dependencies.py  test_email_service.py  test_email_verification_integration.py  test_exceptions_comprehensive.py  test_mfa_service.py  test_multi_tenant_auth.py  test_phone_verification.py  test_platform_admin.py  test_platform_admin_comprehensive.py  test_platform_admin_router_simple.py  test_rate_limits.py  test_rbac_audit_comprehensive.py  test_rbac_cache_invalidation.py  test_rbac_coverage_boost.py  test_rbac_dependencies_comprehensive.py  test_rbac_integration_flow.py  test_rbac_read_router.py  test_rbac_router_complete.py  test_rbac_router_direct.py  test_rbac_service_comprehensive.py  test_refresh_token_integration.py  test_refresh_token_validation.py  test_router_additional.py  test_router_basic_endpoints.py  test_router_comprehensive.py  test_router_extended_coverage.py  test_router_integration.py  test_router_integration.py.bak2  test_router_integration.py.bak3  test_router_verification_flows.py  (+5 more)
tests/core/: test_domain_event_billing_integration.py  test_domain_event_dispatcher.py  test_domain_event_integration.py  test_domain_events.py  test_exceptions.py  test_init.py  test_ip_validation.py  test_models.py
tests/e2e/: __init__.py  conftest.py  test_billing_e2e.py  test_communications_e2e.py  test_customer_management_e2e.py  test_data_transfer_e2e.py  test_file_storage_e2e.py  test_platform_admin_e2e.py  test_secrets_e2e.py  test_webhooks_e2e.py
tests/events/: __init__.py  test_billing_events.py  test_communications_listeners.py  test_customer_publisher.py  test_event_bus.py  test_event_storage.py
tests/fixtures/: __init__.py  app.py  app_stubs.py  async_db.py  async_support.py  billing_support.py  cache_bypass.py  cleanup.py  database.py  dotenv_loader.py  environment.py  example_factories.py  misc.py  mocks.py
tests/fixtures/stubs/: __init__.py  minio.py  redis.py
tests/helpers/: README.md  __init__.py  assertions.py  cleanup_registry.py  contract_testing.py  crud_helpers.py  docker_env.py  fakes.py  fixture_factories.py  mock_builders.py  openapi_validation.py  performance_benchmarks.py  router_base.py  router_testkit.py  test_docker_env.py
tests/integration/: __init__.py  conftest.py  docker_fixtures.py  test_billing_workflow.py  test_bss_phase1_smoke.py  test_bss_phase1_smoke.py.backup  test_complete_provisioning_workflow.py  test_cross_module_dependencies.py  test_customer_contact_relationship.py  test_dual_stack_subscriber_provisioning.py  test_frontend_backend_smoke.py  test_module_interfaces.py  test_netbox_dual_stack_integration.py  test_phase1_smoke.py  test_subscriber_provisioning_workflow.py  test_wireguard_dual_stack_integration.py
tests/utils/: test_helpers.py
(+112 files in other folders)
