[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dotmac-shared"
version = "1.0.0"
description = "Shared library for DotMac Platform and ISP applications"
authors = ["DotMac Team <dev@dotmac.io>"]
packages = [{ include = "dotmac", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.29.0"
redis = "^5.0.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
httpx = "^0.27.0"
structlog = "^24.0.0"
authlib = "^1.3.0"
cachetools = "^5.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.0"
mypy = "^1.11.0"
