[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dotmac-shared"
version = "1.0.0"
description = "Shared library for DotMac Platform and ISP applications"
authors = ["DotMac Team <dev@dotmac.io>"]
packages = [{ include = "dotmac", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.29.0"
redis = "^5.0.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
httpx = "^0.27.0"
structlog = "^24.0.0"
authlib = "^1.3.0"
cachetools = "^5.5.0"
aiohttp = "^3.13.2"
bcrypt = "^5.0.0"
celery = "^5.6.0"
cryptography = "^46.0.3"
dnspython = "^2.8.0"
email-validator = "^2.3.0"
jinja2 = "^3.1.6"
pyjwt = "^2.10.1"
kombu = "^5.6.1"
opentelemetry-api = "^1.38.0"
opentelemetry-sdk = "^1.38.0"
prometheus-client = "^0.23.1"
pybreaker = "^1.4.1"
pyotp = "^2.9.0"
pytz = "^2025.2"
qrcode = "^8.2"
sendgrid = "^6.12.5"
slowapi = "^0.1.9"
strawberry-graphql = "^0.287.0"
tenacity = "^9.1.2"
python-dateutil = "^2.9.0.post0"
twilio = "^9.8.7"
opentelemetry-instrumentation-requests = "^0.59b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.0"
mypy = "^1.11.0"
